# WattpadRecommendations

./: .dockerignore  .env_template  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
src/: main.py  pyproject.toml  test.ipynb
